--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="viewport" content="width=480, initial-scale=0.6, maximum-scale=0.6, minimum-scale=0.6, target-densityDpi=0.6">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
         <header>
